--- a/index.html
+++ b/index.html
@@ -3,10 +3,32 @@
   <head>
     <meta charset="utf-8">
     <title>excursion test</title>
-    <link href="./resources/css/style.css" type="text/css" rel="stylesheet" >
+    <link href="resources/css/style.css" type="text/css" rel="stylesheet" >
   </head>
   <body>
-    <h1>Discover hidden places in the world around you <h1>
+  <h1>Discover hidden places in the world around you </h1>
+
+  <p> <a class="link" href="#">Download Excursion (Coming Soon!)</a> </p>
+
+  <video autoplay muted loop> <source src="resources/video/stockvideo.mp4"> width="250" height="350" type="video/mp4" </video>
+
+  <h1> Your personal travel guide </h1>
+
+  <p> Excursion remember places you like, and recommends new points of interest around you </p>
+
+  <p> <img src="resources/images/camp.jpg" alt=""> </p>
+
+  <p> <img src="resources/images/phone.png"> </P>
+
+  <h2> Coming Soon for iPhone and Android </h2>
+
+  <p> <a class="link" href="#"> Download Excursion (Coming Soon!)</a>
+
+  <div class="end">
+  <p>&copy; Excursion</p>
+   </div>
+
+
 
   </body>
 </html>
