--- a/index.html
+++ b/index.html
@@ -6,27 +6,27 @@
     <link href="resources/css/style.css" type="text/css" rel="stylesheet" >
   </head>
   <body>
-  <h1>Discover hidden places in the world around you </h1>
+    <h1>Discover hidden places in the world around you </h1>
 
-  <p> <a class="link" href="#">Download Excursion (Coming Soon!)</a> </p>
+    <p> <a class="link" href="#">Download Excursion (Coming Soon!) </a> </p>
 
-  <video autoplay muted loop> <source src="resources/video/stockvideo.mp4"> width="250" height="350" type="video/mp4" </video>
+    <video autoplay muted loop> <source src="resources/video/stockvideo.mp4"> width="250" height="350" type="video/mp4" </video>
 
-  <h1> Your personal travel guide </h1>
+    <h1> Your personal travel guide </h1>
 
-  <p> Excursion remember places you like, and recommends new points of interest around you </p>
+    <p> Excursion remembers places you like, and recommends new points of interest around you </p>
 
-  <p> <img src="resources/images/camp.jpg" alt=""> </p>
+    <p> <img src="resources/images/camp.jpg" alt=""> </p>
 
-  <p> <img src="resources/images/phone.png"> </P>
+    <p> <img src="resources/images/phone.png"> </P>
 
-  <h2> Coming Soon for iPhone and Android </h2>
+    <h2> Coming Soon for iPhone and Android </h2>
 
-  <p> <a class="link" href="#"> Download Excursion (Coming Soon!)</a>
+    <p> <a class="link" href="#"> Download Excursion (Coming Soon!) </a>
 
-  <div class="end">
-  <p>&copy; Excursion</p>
-   </div>
+    <div class="end">
+      <p>&copy; Excursion</p>
+    </div>
 
 
 
